--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,6 @@
-<p><%= result.cnt  %></p>
-<form action="/index" method="post">
-    <input type="image" src="images/plant.png" alt="Submit" width="48" height="48" style="cursor:pointer;">
-</form>
-<p><%= hello %></p>
+
+
+
 
 <!DOCTYPE HTML>
 <html lang="ko-KR">
@@ -51,9 +49,15 @@
 			<br />
 			SAVE THE WORLD.</p>
 			<footer>
-				<ul class="buttons vertical">
-					<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
-				</ul>
+        <% if(user){ %>
+          <form action="/index" method="post">
+              <input type="image" src="images/plant.png" alt="Submit" width="48" height="48" style="cursor:pointer;">
+          </form>
+          <p><br/><%= result.cnt %> / <%= alltumb.cnt %></p>
+        <% } else { %>
+          <a href="/auth/login"><img src="images/plant.png" width="48" height="48"/></a>
+          <p><br/><%= alltumb.cnt %></p>
+        <% } %>
 			</footer>
 		</div>
 	</section><!-- section1 -->
@@ -68,8 +72,8 @@
 
 	<!-- section2 -->
 		<section id="section2">
-			<p>I USE TUMBLER 에서는 현재 <strong>50</strong>명의 회원이<br />
-			   <strong>3333</strong>번 텀블러를 사용하고 있습니다.
+			<p>I USE TUMBLER 에서는 현재 <strong><%= alluser.cnt  %></strong>명의 회원이<br />
+			   <strong><%= alltumb.cnt  %></strong>번 텀블러를 사용하고 있습니다.
 			</p>
 
 			<div class="box">
@@ -77,7 +81,7 @@
 					<img src="images/tree_black.png" alt="">
 					<p><span>&nbsp;&nbsp;tree&nbsp;&nbsp;</span></p>
 				</div>
-				<p class="downbox">15.5 tree</p>
+				<p class="downbox"><%= (alltumb.cnt/250.0).toFixed(2)  %>tree</p>
 				<span class="tooltiptext">1 tumbler = 0.004tree</span>
 			</div>
 			<div class="box">
@@ -85,7 +89,7 @@
 					<img src="images/water_black.png" alt="">
 					<p><span>&nbsp;&nbsp;water&nbsp;&nbsp;</span></p>
 				</div>
-				<p class="downbox">387.9L</p>
+				<p class="downbox"><%= (alltumb.cnt/10.0).toFixed(2)  %>L</p>
 				<span class="tooltiptext">1 tumbler = 0.1L</span>
 			</div>
 			<div class="box">
@@ -93,7 +97,7 @@
 					<img src="images/co2_black.png" alt="">
 					<p><span>&nbsp;&nbsp;gas&nbsp;&nbsp;</span></p>
 				</div>
-				<p class="downbox">387.9kg</p>
+				<p class="downbox"><%= (alltumb.cnt/10.0).toFixed(2)  %>kg</p>
 				<span class="tooltiptext">1 tumbler = 0.1KG</span>
 			</div>
 			<div class="box">
@@ -101,7 +105,7 @@
 					<img src="images/trash_black.png" alt="">
 					<p><span>&nbsp;&nbsp;trash&nbsp;&nbsp;</span></p>
 				</div>
-				<p class="downbox">129.3kg</p>
+				<p class="downbox"><%= (alltumb.cnt/30.0).toFixed(2)  %>kg</p>
 				<span class="tooltiptext">1 tumbler = 0.03kg</span>
 			</div>
 		</section><!-- section2 -->
