--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,27 @@
-<h1>LOGIN PAGE</h1>
+<!DOCTYPE HTML>
+<html lang="ko-KR">
+<head>
+	<meta charset="UTF-8">
+	<title>Login</title>
+	<link rel="stylesheet" href="/stylesheets/style_auth.css" />
+</head>
+<body>
 
-<form action="/auth/login" method="post">
-    <div>
-        <label>Username:</label>
-        <input type="text" name="username"/>
-    </div>
-    <div>
-        <label>Password:</label>
-        <input type="password" name="password"/>
-    </div>
-    <div>
-        <input type="submit" value="Log In"/>
-    </div>
-</form>
+  <div class="login">
+    <h1>Login</h1>
+    <form action="/auth/login" method="post">
+        <div>
+            <input type="text" name="username" placeholder="Username" required="required" />
+        </div>
+        <div>
+            <input type="password" name="password" placeholder="password" required="required" />
+        </div>
+        <div>
+        <button type="submit" class="btn btn-primary btn-block btn-large">Login</button>
+        </div>
+    </form>
+  </div>
+
+</body>
+
+</html>
