--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -1,6 +1,9 @@
 <head>
   <title>statistics</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+  <style>
+    background: orange;
+  </style>
 </head>
 <body>
   <h1>STATISTICS</h1>
@@ -21,12 +24,16 @@
   <p><%= result[i].usercount %> <%= result[i].usertime %></p>
   <% } %>
 
-  <div class="chart-container" style="position: relative; height:40vh; width:80vw">
-    <canvas id="myChart"></canvas>
+  <div class="chart-container" >
+    <canvas id="line-chart" width="800" height="450"></canvas>
   </div>
 
+    <div class="chart-container" >
+      <canvas id="pie-chart" width="400" height="250"></canvas>
+    </div>
+
   <script>
-    var ctx = document.getElementById('myChart').getContext('2d');
+    var ctx = document.getElementById('line-chart').getContext('2d');
     var chart = new Chart(ctx, {
   type: 'line',
   data: {
@@ -74,6 +81,26 @@
       }
   }
 });
+
+
+var chart2 = new Chart(document.getElementById("pie-chart"), {
+    type: 'pie',
+    data: {
+      labels: ["female", "male"],
+      datasets: [{
+        label: "Population (millions)",
+        backgroundColor: ["#8e5ea2","#3cba9f"],
+        data: <%- JSON.stringify(gender); %>
+      }]
+    },
+    options: {
+      title: {
+        display: true,
+        text: 'mail and female'
+      }
+    }
+});
+
 
   </script>
 
