local모드로 원복

--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -2,7 +2,7 @@
   <title>statistics</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   <style>
-    background: orange;
+    backgroundColor: orange;
   </style>
 </head>
 <body>
